[gd_scene load_steps=2 format=3 uid="uid://5xsb14l2nrao"]

[ext_resource type="Script" path="res://environment/thing_of_home.gd" id="1_6wsfq"]

[node name="thingOfHome" type="StaticBody2D"]
script = ExtResource("1_6wsfq")

[node name="playerNearby" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerNearby"]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="playerNearby" to="." method="_on_player_nearby_body_entered"]
[connection signal="body_exited" from="playerNearby" to="." method="_on_player_nearby_body_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
